se agregaron los logos de las redes sociales a la seccion footer

--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
           <button>Comprar</button>
         </div>
       </div>
-      <div class="footer"><strong>@Nike</strong></div>
+      <div class="footer">
+        <strong
+          >@Nike <br />
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-facebook"></i
+        ></strong>
+      </div>
     </div>
   </body>
 </html>
